@startuml

title __JAVA's Class Diagram__\n

  package  {
    class Client {
        {static} + main()
    }
  }
  

  package  {
    class LogicaPartida {
        + LogicaPartida()
        + startManualGame()
        - cmd_split()
        + startRandomGame()
        + basicStrategy()
        + hitt()
        + doubleHitt()
        + show()
        + srnd()
        + doubleStand()
    }
  }
  

  package  {
    class PartidaClient {
        ~ opc : int
        + PartidaClient()
        - switchPartida()
    }
  }
  

  LogicaPartida o-- ComUtilsService : comUtilsS
  LogicaPartida o-- Deck : d
  PartidaClient o-- LogicaPartida : logic


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
